--- a/project/ansible/files/docker-compose.yaml
+++ b/project/ansible/files/docker-compose.yaml
@@ -8,21 +8,10 @@ services:
     volumes:
       - "./data:/data:rw"
     command: python manage.py runserver 0.0.0.0:80
+    restart: unless-stopped
     networks:
       - djangocmsnet
     env_file: .env-local
-
-  database_default:
-    image: postgres:13.5-alpine
-    ports:
-      - "5432:5432/tcp"
-    environment:
-      POSTGRES_DB: "db"
-      POSTGRES_PASSWORD: "password"
-      POSTGRES_HOST_AUTH_METHOD: "trust"
-      SERVICE_MANAGER: "fsm-postgres"
-    networks:
-      - djangocmsnet
 
 networks:
   djangocmsnet:
