dev: complete backup and master restore

--- a/project/ansible/create-database-backup.yaml
+++ b/project/ansible/create-database-backup.yaml
@@ -1,14 +1,16 @@
 - name: Create backup
   hosts: storage
-  become_user: barman
+  become: true
   vars:
     master: db1
   tasks:
     - name: Create database backup
       ansible.builtin.shell: "barman backup {{ master }}"
+      become_user: barman
 
     - name: List backups
       ansible.builtin.shell: "barman list-backups {{ master }}"
       register: backups
+      become_user: barman
 
     - debug: msg="{{ backups.stdout }}"
