--- a/project/ansible/barman.yaml
+++ b/project/ansible/barman.yaml
@@ -94,7 +94,7 @@
         db_ip: "{{ item.db_ip }}"
         active: "{{ item.active }}"
       with_items:
-        - { db_hostname: "db1", db_ip: "10.10.1.131", active: "false" }
+        - { db_hostname: "db1", db_ip: "10.10.1.131", active: "true" }
         - { db_hostname: "db2", db_ip: "10.10.1.132", active: "false" }
       when: (ansible_hostname == "storage")
 
