--- a/project/ansible/switch-barman-on-another-slave.yaml
+++ b/project/ansible/switch-barman-on-another-slave.yaml
@@ -1,8 +1,8 @@
 - name: Config backup
-  hosts: storage
+  hosts: barman
   become: true
   vars:
-    master: db2
+    slave: db1
     barman_user: barman
   tasks:
     - name: copy server config
@@ -17,12 +17,12 @@
         db_ip: "{{ item.db_ip }}"
         active: "{{ item.active }}"
       with_items:
-        - { db_hostname: "db1", db_ip: "10.10.1.131", active: "false" }
-        - { db_hostname: "db2", db_ip: "10.10.1.132", active: "true" }
+        - { db_hostname: "db1", db_ip: "10.10.1.131", active: "true" }
+        - { db_hostname: "db2", db_ip: "10.10.1.132", active: "false" }
       become: true
 
-    - name: barman switch-wal master
-      ansible.builtin.shell: barman switch-wal --force db2
+    - name: barman switch-wal slave
+      ansible.builtin.shell: barman switch-wal --force db1
       become_user: barman
 
     - name: barman cron
