dev: add recover playbook

--- a/project/ansible/create-database-backup.yaml
+++ b/project/ansible/create-database-backup.yaml
@@ -4,6 +4,10 @@
   vars:
     master: db1
   tasks:
+    - name: barman switch-wal master
+      ansible.builtin.shell: "barman switch-wal --force {{ master }}"
+      become_user: barman
+
     - name: Create database backup
       ansible.builtin.shell: "barman backup {{ master }}"
       become_user: barman
