--- a/project/ansible/provision.yaml
+++ b/project/ansible/provision.yaml
@@ -1,5 +1,5 @@
 ---
-- import_playbook: "firewalld-internal-config.yaml"
+- import_playbook: "firewalld-config.yaml"
 - import_playbook: "database.yaml"
 - import_playbook: "fw.yaml"
 - import_playbook: "app.yaml"
