--- a/project/ansible/database-recover-latest.yaml
+++ b/project/ansible/database-recover-latest.yaml
@@ -31,3 +31,37 @@
         name: postgresql-14
         state: started
       when: (ansible_hostname == master)
+
+- name: Config replication slave
+  hosts: "{{ slave | default('no_hosts') }}"
+  become: true
+  vars:
+    master_ip: 10.10.1.131
+  tasks:
+    - name: Stop postgres
+      ansible.builtin.service:
+        name: postgresql-14
+        state: stopped
+
+    - name: Remove old data
+      ansible.builtin.file:
+        path: /var/lib/pgsql/14/data
+        state: absent
+
+    - name: Request basebackup
+      ansible.builtin.expect:
+        command: "pg_basebackup -h {{ master_ip }} -U  replicator -p 5432 -D /var/lib/pgsql/14/data/ -R -P"
+        responses: 
+          '.*Password*': "secret"
+      become_user: postgres
+
+    - name: Copy config file
+      ansible.builtin.copy:
+        src: postgresql.conf
+        dest: /var/lib/pgsql/14/data/postgresql.conf
+        force: true
+
+    - name: Restart postgres
+      ansible.builtin.service:
+        name: postgresql-14
+        state: restarted
