--- a/project/ansible/database-slave-reinit.yaml
+++ b/project/ansible/database-slave-reinit.yaml
@@ -169,3 +169,11 @@
     - name: barman cron
       ansible.builtin.shell: barman cron
       become_user: barman
+
+    - name: update backup cronjob
+      ansible.builtin.cron:
+        name: create backup
+        minute: "15"
+        hour: "0"
+        job: "barman cron && barman backup {{ master }}"
+      become_user: barman
