--- a/project/ansible/provision.yaml
+++ b/project/ansible/provision.yaml
@@ -2,6 +2,7 @@
 - import_playbook: "firewalld-config.yaml"
 - import_playbook: "database.yaml"
 - import_playbook: "fw.yaml"
-- import_playbook: "app.yaml"
 - import_playbook: "barman.yaml"
+- import_playbook: "nfs.yaml"
+- import_playbook: "app.yaml"
 - import_playbook: "blnc.yaml"
